--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -67,8 +67,52 @@
   </style>
 
   <script>
+    const hourHand = document.querySelector('.hour-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const secondHand = document.querySelector('.second-hand');
+
+    function tick() {
+      const now = new Date;
+
+      let secondDegrees = (now.getSeconds() / 60) * 360;
+      let minuteDegrees = (now.getMinutes() / 60) * 360;
+      let hourDegrees = now.getHours() > 12 
+        ? now.getHours() - 12
+        : now.getHours();
+      hourDegrees = ((minuteDegrees * 60) + 24) * 0.5;
+
+      secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+      minuteHand.style.transform = `rotate(${minuteDegrees}deg)`;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    }
+
+    setInterval(tick, 1000);
+
+    tick();
 
 
   </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
