--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -73,10 +73,19 @@
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    let trans = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 1;
+      }
+      obj[item] += 1;
+      return obj;
+    }, {});
+    console.log(trans);
   </script>
 </body>
 </html>
